--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y devscripts
+  - sudo apt-get install -y debhelper devscripts
   - wget ftp.halifax.rwth-aachen.de/eclipse//technology/epp/downloads/release/${ECLIPSE_VERSION}/R/${ECLIPSE_FILE}
 
 install:
