Added bash completion for .tar.gz files

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: eclipse-package
 Priority: extra
 Maintainer: Philipp Meisberger <team@pm-codeworks.de>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), bash-completion
 Section: shells
 Standards-Version: 3.9.8
 Vcs-Git: https://github.com/philippmeisberger/eclipse-package.git
