--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Maintainer: Philipp Meisberger <team@pm-codeworks.de>
 Build-Depends: debhelper (>= 9), bash-completion
 Section: shells
 Standards-Version: 3.9.8
+Homepage: https://www.pm-codeworks.de/eclipse-package.html
 Vcs-Git: https://github.com/philippmeisberger/eclipse-package.git
 
 Package: eclipse-package
