--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Section: shells
 Standards-Version: 3.9.8
 Homepage: https://www.pm-codeworks.de/eclipse-package.html
 Vcs-Git: https://github.com/philippmeisberger/eclipse-package.git
+Vcs-Browser: https://github.com/philippmeisberger/eclipse-package
 
 Package: eclipse-package
 Architecture: all
