--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y debhelper devscripts libsecret-1.0
+  - sudo apt-get install -y debhelper devscripts fakeroot libsecret-1.0
 
 install:
   - dpkg-buildpackage -uc -us
